--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -7,11 +7,17 @@
     "Password": "Passwort",
     "RptPassword": "Passwort Wiederholen",
     "Role": "Rolle",
+    "Login": "Anmeldung",
+    "Register": "Registrieren",
+    "InputReq": "Eingabe angefordert",
     "BtnNext": "Nächste",
+    "BackToLogin": "Zurück zur Anmeldung",
     "CreateAccount": "Ein neues Konto erstellen ",
     "Greeting": "Hallo {{form.name}}",
     "ChangeLanguage": "Sprache ändern",
     "Error_Login": "Login Fehler",
-    "Error_Login_Message": "Login oder Passwort is falsch"
+    "Error_Login_Message": "Login oder Passwort is falsch",
+    "Error_Registration": "Registrieren Error",
+    "Error_Registration_Message": "Überprüfen Sie Ihre Angaben"
   }
 }
