--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -7,11 +7,17 @@
     "Password": "Hasło",
     "RptPassword": "Powtórz Hasło",
     "Role": "Rola",
+    "Login": "Zaloguj się",
+    "Register": "Zarejestruj się",
+    "InputReq": "Pole Wymagane",
     "BtnNext": "Dalej",
+    "BackToLogin": "Powrót Do Logowania",
     "CreateAccount": "Stwórz Nowe Konto",
     "Greeting": "Witaj {{form.name}}",
     "ChangeLanguage": "Zmień Język",
     "Error_Login": "Błąd Logowania",
-    "Error_Login_Message": "Zły Login lub Hasło"
+    "Error_Login_Message": "Zły Login lub Hasło",
+    "Error_Registration": "Błąd Rejestracji",
+    "Error_Registration_Message": "Sprawdź swoje dane"
   }
 }
