1st attempt to create user list

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -13,7 +13,7 @@
     "BtnNext": "Nächste",
     "BackToLogin": "Zurück zur Anmeldung",
     "CreateAccount": "Ein neues Konto erstellen ",
-    "Greeting": "Hallo {{form.name}}",
+    "Greeting": "Hallo",
     "ChangeLanguage": "Sprache ändern",
     "Error_Login": "Login Fehler",
     "Error_Login_Message": "Login oder Passwort is falsch",
