--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -18,7 +18,9 @@
     "Error_Login": "Błąd Logowania",
     "Error_Login_Message": "Zły Login lub Hasło",
     "Error_Registration": "Błąd Rejestracji",
-    "Error_Registration_Message": "Sprawdź swoje dane"
+    "Error_Registration_Message": "Sprawdź swoje dane",
+    "Edit": "Edycja użytkownika",
+    "EditBtn": "Edytuj"
   },
   "User_List": {
     "Name": "Imię",
@@ -26,6 +28,10 @@
     "Login": "Login",
     "Role": "Rola",
     "Action": "Akcje",
-    "User_List": "Lista Użytkowników"
+    "User_List": "Lista Użytkowników",
+    "Dialog": {
+      "Header": "Wiadomość",
+      "Message": "Czy na pewno chcesz usunąć użytkownika"
+    }
   }
 }
