--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -15,20 +15,20 @@
     "CreateAccount": "Stwórz Nowe Konto",
     "Greeting": "Witaj",
     "ChangeLanguage": "Zmień Język",
-    "Error_Login": "Błąd Logowania",
-    "Error_Login_Message": "Zły Login lub Hasło",
-    "Error_Registration": "Błąd Rejestracji",
-    "Error_Registration_Message": "Sprawdź swoje dane",
+    "ErrorLogin": "Błąd Logowania",
+    "ErrorLoginMessage": "Zły Login lub Hasło",
+    "ErrorRegistration": "Błąd Rejestracji",
+    "ErrorRegistrationMessage": "Sprawdź swoje dane",
     "Edit": "Edycja użytkownika",
     "EditBtn": "Edytuj"
   },
-  "User_List": {
+  "UserList": {
     "Name": "Imię",
     "LastName": "Nazwisko",
     "Login": "Login",
     "Role": "Rola",
     "Action": "Akcje",
-    "User_List": "Lista Użytkowników",
+    "UserList": "Lista Użytkowników",
     "Dialog": {
       "Header": "Wiadomość",
       "Message": "Czy na pewno chcesz usunąć użytkownika"
